# routes/companies.js
@@ -3,11 +3,12 @@ const router = express.Router();
 const companiesController = require('../controllers/companies');
 const validateCompany = require('../middleware/validateCompany');
 const validateObjectId = require('../middleware/validateObjectId');
+const authenticate = require('../middleware/auth');
 
 router.get('/', companiesController.getAll);
 router.get('/:id', validateObjectId, companiesController.getSingle);
-router.post('/', validateCompany, companiesController.createCompany);
-router.put('/:id', validateObjectId, validateCompany, companiesController.updateCompany);
-router.delete('/:id', validateObjectId, companiesController.deleteCompany);
+router.post('/', authenticate, validateCompany, companiesController.createCompany);
+router.put('/:id', validateObjectId, authenticate, validateCompany, companiesController.updateCompany);
+router.delete('/:id', validateObjectId, authenticate, companiesController.deleteCompany);
 
 module.exports = router;
